# garage-firmware

./: .gitignore  CMakeLists.txt
blue-pill-blinky/: Cargo.toml
blue-pill-blinky/src/: led.rs  main.rs
cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake  STM32.cmake  Toolchain-arm-none-eabi.cmake
shared/: oscillator.py
shared/include/: stm32_hal.h
shared/include/algo/: stepgen.hpp
shared/include/hw/: core.hpp  delay.hpp  driver.hpp  encoder.hpp  gpio.hpp  hall.hpp  lcd.hpp  led.hpp  stepper.hpp
shared/include/util/: simstream.hpp  util.hpp
shared/ldscripts/: mem.ld  sections.ld
shared/src/algo/: stepgen.cpp
shared/src/hw/: driver.cpp  encoder.cpp  hall.cpp  lcd.cpp
shared/test/: Makefile  stepgen-test.cpp  testdata
stm32f0discovery-blinky/: CMakeLists.txt
stm32f0discovery-blinky/include/: config.hpp
stm32f0discovery-blinky/src/: main.cpp
x2-mill/: CMakeLists.txt  README.txt  openocd.cfg
x2-mill/include/: config.hpp  stm32f1xx_hal_conf.h
x2-mill/pcb/: eagle.epf
x2-mill/src/: main.cpp
